# VRP

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DISTRIBUTION_CHECKLIST.md  GETTING_STARTED.txt  LICENSE  MIGRATION_COMPLETE.md  PROJECT_READY_FOR_DISTRIBUTION.md  QUICKSTART.md  README.md  README_FIRST.txt  __init__.py  canvas_view.py  clean_for_distribution.bat  clean_for_distribution.sh  geo.py  main.py  models.py  pyproject.toml  requirements.txt  road_network.py  run_dashboard.bat  run_dashboard.sh  sample_manifest.csv  setup.bat  setup.py  setup.sh  solver.py  test_installation.py  vrp_core.py
.kiro/steering/: DLL Issue.md  product.md  structure.md  tech.md
.nicegui/: storage-user-cb06bae8-1441-47a2-8170-ba75d438a592.json
.playwright-cli/: page-2026-04-21T11-41-08-588Z.yml
cache/: geocode.json  reverse_geocode.json
cache/routes/: 15.46294_73.93653__19.00380_72.82950.json  15.46294_73.93653__19.05960_72.82950.json  15.46294_73.93653__19.07600_72.87770.json  15.46294_73.93653__19.11360_72.86970.json  15.46294_73.93653__19.11760_72.90600.json  18.21761_74.19665__19.07600_72.87770.json  18.21761_74.19665__19.11360_72.86970.json  18.21761_74.19665__19.11760_72.90600.json  18.21761_74.19665__19.44458_74.55306.json  18.21761_74.19665__20.20936_74.06836.json  18.98476_73.09302__19.00380_72.82950.json  18.98476_73.09302__19.03300_73.02970.json  18.98476_73.09302__19.05960_72.82950.json  18.98476_73.09302__19.07600_72.87770.json  18.98476_73.09302__19.11360_72.86970.json  18.98476_73.09302__19.11760_72.90600.json  18.98952_73.12219__19.00380_72.82950.json  18.98952_73.12219__19.05960_72.82950.json  18.98952_73.12219__19.06395_72.83579.json  18.98952_73.12219__19.07600_72.87770.json  18.98952_73.12219__19.11360_72.86970.json  18.98952_73.12219__19.11760_72.90600.json  18.99116_73.11568__19.00380_72.82950.json  18.99116_73.11568__19.03300_73.02970.json  18.99116_73.11568__19.05960_72.82950.json  18.99116_73.11568__19.06395_72.83579.json  18.99116_73.11568__19.07600_72.87770.json  18.99116_73.11568__19.11360_72.86970.json  18.99116_73.11568__19.11760_72.90600.json  18.99116_73.11568__19.16819_72.95913.json  18.99116_73.11568__19.19111_72.87124.json  18.99116_73.11568__19.29703_72.85869.json  (+284 more)
dashboard/: app.py  csv_parser.py  financial_engine.py  fleet_composer.py  lifo_packing_engine.py  manifest_builder.py  packing_config.py  packing_engine.py  packing_engine_dbl.py  requirements.txt
include/: solver.h
mini_vrp_tkinter/: README.md  canvas_view.py  geo.py  main.py  models.py  solver.py
src/: bindings.cpp  main.cpp  solver.cpp  test_distance.cpp  test_euclidean.cpp  test_infinite_loop.cpp  test_multiple_routes.cpp  test_nearest_neighbor.cpp  test_service_time_cpp.cpp
src/vrp_platform/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  test_avx2_checkpoint.py  test_chaos_financial_integration.py  test_contact_point_limit.py  test_csv_parser.py  test_dbl_integration.py  test_e2e_integration.py  test_financial_calculations.py  test_financial_engine.py  test_fixes.py  test_geo.py  test_heterogeneous_fleet_integration.py  test_lifo_packing.py  test_main.py  test_manifest_builder.py  test_packing_algorithm.py  test_packing_dbl_checkpoint.py  test_packing_lifo.py  test_reactive_cost_recalculation.py  test_solve_routing_integration.py  test_solver.py  test_task_5_integration.py  test_task_7_core_algorithm.py  test_time_matrix_integration.py
(+165 files in other folders)
